--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "@mantine/core": "^4.2.10",
     "@mantine/hooks": "^4.2.10",
+    "firebase": "^9.8.4",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
