--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "@mantine/core": "^4.2.10",
     "@mantine/hooks": "^4.2.10",
     "firebase": "^9.8.4",
+    "formik": "^2.2.9",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
