--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mantine/hooks": "^4.2.10",
     "firebase": "^9.8.4",
     "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
