--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^6.5.1",
     "next": "latest",
     "react": "18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
@@ -22,7 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
+    "@types/react": "^18.0.15",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
