--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@mantine/core": "^4.2.10",
@@ -27,6 +28,8 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
