--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@mantine/core": "^4.2.10",
     "@mantine/hooks": "^4.2.10",
+    "@sendgrid/mail": "^7.7.0",
+    "dotenv": "^16.0.1",
     "firebase": "^9.8.4",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
