--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-spinners": "^0.13.4",
     "uuidv4": "^6.2.13",
     "yup": "^0.32.11"
   },
