--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^4.2.10",
-    "@mantine/hooks": "^4.2.10",
+    "@emotion/react": "^11.10.0",
+    "@mantine/core": "^5.1.6",
+    "@mantine/hooks": "^5.1.6",
+    "@popperjs/core": "^2.11.6",
     "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.1",
     "firebase": "^9.8.4",
@@ -21,6 +23,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
+    "react-popper": "^2.3.0",
     "react-spinners": "^0.13.4",
     "uuidv4": "^6.2.13",
     "yup": "^0.32.11"
